# verichainX-hedera

./: .gitignore  .isort.cfg  DEPLOYMENT_GUIDE.md  README.md  hedera_mirror.py  index.html  main_tidb.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_tidb_schema.py  vercel.json  vite.config.ts
.do/: app.yaml  frontend.yaml
.github/workflows/: ci.yml
api/hedera/: test-connection.ts
hedera-service/: .gitignore  hardhat.config.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
hedera-service/contracts/: VeriChainXDAOTreasury.sol  VeriChainXGovernance.sol  VeriChainXTokenFactory.sol
hedera-service/contracts/AMM/: VeriChainXAuthenticityAMM.sol  VeriChainXAuthenticityToken.sol
hedera-service/contracts/Bridge/: VeriChainXBridgeRelay.sol  VeriChainXCrossChainBridge.sol
hedera-service/scripts/: smokeTestAgents.ts
hedera-service/src/: index.ts
hedera-service/src/agents/: AMMAgent.ts  HcsAgent.ts  HederaAgentKit.ts  HtsAgent.ts  SmartContractAgent.ts
hedera-service/src/config/: hedera.ts  redis.ts
hedera-service/src/routes/: health.ts  hedera.ts
hedera-service/src/services/: ammService.ts  bridgeService.ts  defiService.ts  redisService.ts  smartContractService.ts
hedera-service/src/utils/: logger.ts
hedera-service/tests/: setup.ts
hedera-service/tests/agents/: HederaAgentKit.test.ts
src/: App.verichainx.tsx  theme.ts
src/components/: BlockchainSection.tsx
src/pages/: AdminPage.tsx  CertificatePage.tsx  LandingPage.tsx  VerifyPage.tsx
src/services/: api.ts
(+7 files in other folders)
