# NOTE: This file intentionally has NO [project] table.
#
# The deployed backend is main_tidb.py, whose dependencies live in
# requirements.txt. Vercel's @vercel/python uses `uv`, which would otherwise try
# to resolve/install this file's [project] dependencies — the heavy, pinned
# counterfeit_detection set (sentence-transformers, torch, pydantic==2.0.5, …)
# that is both unsatisfiable and far over Vercel's serverless size limit.
# Removing [project] makes @vercel/python fall back to requirements.txt.
#
# Only local dev-tool configuration is kept below. To work on the original
# src/counterfeit_detection package, install its deps from requirements-dev.txt.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["counterfeit_detection"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
